# mcache

./: .gitignore  CMakeLists.txt  MCache.cpp  MCache.h  README.md  main.cpp
include/: MCache.h  cli.h  serialization.h
src/: ListCache.cpp  MCache.cpp  cli.cpp  main.cpp
tests/: list_test.cpp  test_cache.cpp
